# besty-term

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  slack.rs  socket.rs  state.rs  ui.rs
